2001-02-09  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Maciej Stachowiak <mjs@eazel.com>

	* libnautilus-extensions/nautilus-image-table.c:
	(image_table_handle_motion), (ancestor_button_press_event),
	(ancestor_button_release_event):
	Ignore insensitive widgets when doing the event thing.
	
	* src/nautilus-property-browser.c:
	(make_properties_from_directories):
	Add an extra empty space between the erase emblem and the next to
	make it stand out more.  Cleanup property image creation a tiny bit.

2001-02-09  Robey Pointer  <robey@eazel.com>

	* po/POTFILES.in:

	Fix build bustage by removing the two missing install-lib files
	from POTFILES.in.

2001-02-09  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Robey Pointer  <robey@eazel.com>

	* libnautilus-extensions/Makefile.am:
	* libnautilus-extensions/nautilus-region.c:
	* libnautilus-extensions/nautilus-region.h:
	New class for super easy region management using rectangle.

	* libnautilus-extensions/nautilus-art-gtk-extensions.h:
	* libnautilus-extensions/nautilus-art-gtk-extensions.c:
	(nautilus_gdk_rectangle_assign_irect):
	New function to convert ArtIRect to GdkRectangles.

	* libnautilus-extensions/nautilus-customization-data.h:
	* libnautilus-extensions/nautilus-customization-data.c:
	(nautilus_customization_data_get_next_element_for_display):
	Return pixbufs and labels for the object instead of widgets.  This
	is so that the caller can use the widget that best suits its
	display needs.

	* libnautilus-extensions/nautilus-image-table.h:
	* libnautilus-extensions/nautilus-image-table.c:
	(nautilus_image_table_initialize_class),
	(nautilus_image_table_initialize),
	(nautilus_image_table_expose_event),
	(nautilus_image_table_realize), (nautilus_image_table_unrealize),
	(nautilus_image_table_set_is_smooth_signal),
	(image_table_foreach_child_subtract_content),
	(image_table_clear_dirty_areas), (image_table_peek_clear_gc),
	(image_table_emit_signal), (image_table_handle_motion),