@@ -1,3 +1,12 @@
+2001-02-10  Andy Hertzfeld  <andy@eazel.com>
+
+	* src/nautilus-sidebar.c: (add_command_buttons),
+	(empty_trash_callback),
+	(nautilus_sidebar_trash_state_changed_callback),
+	(nautilus_sidebar_update_buttons):
+	fixed bug 6052, sidebar needs empty trash button when showing
+	trash: directory
+	
 2001-02-09  Ramiro Estrugo  <ramiro@eazel.com>
 
 	reviewed by: Maciej Stachowiak <mjs@eazel.com>
